Secondary body structured and index file modified to include header text for this section

--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,20 @@ button {
     width: 100px;
     height: auto;
 }
+
+/* Secondary Body Styling and Structure */
+.Secondary {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 52px;
+}
+
+.secondary-title {
+
+}
+
+.image-box {
+    max-width: 200px;
+}
+
