--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    margin: 0;
 }
 
 
@@ -12,33 +13,72 @@ body {
 .Header-extra-box {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     gap: 20px;
     text-align: center;
-    
+    background-color: #1F2937;
 }
+
+.header-logo {
+    font-size: 14px;
+    color: #F9FAF8;
+    margin: auto;
+}
+
+.Header-extra-box {
+    font-size: 12px;
+    color: #F9FAF8;
+    margin: auto;
+}
+
 
 /* Hero Styling and Structure */
 .Hero {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    background-color: #1F2937;
+    gap: 50px;
+    padding: 150px;
 }
 
 .Hero-Text {
     display: block;
     max-width: 350px;
     text-align: left;
+    margin: auto;
+}
+
+#Hero-main-text {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+}
+
+#Hero-secondary-text {
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .Hero-image {
     display: flex;
+    justify-content: center;
+    margin: auto;
     height: 300px;
     width: 350px;
 }
 
-button {
+#hero-sign {
+    margin: 5px;
+    padding: 5px;
+    border: 10px;
+    border-radius: 15px 50px 30px 5px;
     width: 100px;
     height: auto;
+    font-size: 15px;
+    font-weight: 800;
+    color: #F9FAF8;
+    background-color: #3882F6;
 }
 
 /* Secondary Body Styling and Structure */
