--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,10 @@ body {
 
 img {
     overflow-clip-margin: content-box;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
+    border: 5px solid #3882F6;
+    border-radius: 15px 50px 30px 5px;
 }
 
 /* Header Styling and Structure */
@@ -43,7 +45,7 @@ img {
     align-items: center;
     background-color: #1F2937;
     gap: 50px;
-    padding: 150px;
+    padding: 100px 150px 150px 100px;
 }
 
 .Hero-Text {
@@ -67,9 +69,16 @@ img {
 .Hero-image {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: auto;
     height: 300px;
     width: 350px;
+}
+
+#hero-image-specific {
+    width: 400px;
+    height: 400px;
+    border: 0;
 }
 
 #hero-sign {
@@ -89,6 +98,7 @@ img {
     justify-content: center;
     flex-wrap: wrap;
     gap: 52px;
+    padding: 55px 20px 75px 20px;
 }
 
 .secondary-title {
@@ -101,10 +111,6 @@ img {
     display: block;
     max-width: 200px;
     height: auto;
-}
-
-#image-p {
-    
 }
 
 /* Tertiary Body Styling and Structure */
@@ -130,6 +136,7 @@ img {
 /* Quaternary Body Styling and Structure */
 .Quaternary {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
     margin: 120px 300px 120px 300px;
@@ -162,4 +169,13 @@ img {
     font-size: 16px;
     font-weight: 800;
     cursor: pointer;
+}
+
+/* Footer Body Styling and Structure */
+.Footer {
+    font-size: 18px;
+    font-weight: 800;
+    color: #E5E7EB;
+    background-color: #1F2937;
+    padding: 2em;
 }
